[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iEEG-prep"
version = "0.1.0"
description = "iEEG preprocessing, IED analysis, and language localizer pipeline"
authors = [{name = "Eyas Ayesh", email = "eayesh3@gatech.edu"}]
requires-python = ">=3.8"
dependencies = [
    "mne",
    "numpy",
    "pandas",
    "scipy",
    "jaxtyping",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
]

[project.scripts]
csv2brainplot = "ieeg_prep.viz.csv2brainplot:main"
run-prep = "ieeg_prep.prep.run_prep:main"
run-blocks = "ieeg_prep.task_analysis.extract_blocks:main"
run-langloc = "ieeg_prep.task_analysis.langloc.run:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ieeg_prep*"]
